[gd_scene load_steps=14 format=3 uid="uid://ck2orlq2o5qmb"]

[ext_resource type="Script" path="res://Scripts/Player/player.gd" id="1_yt6el"]
[ext_resource type="PackedScene" uid="uid://dhppob31bvgco" path="res://Scenes/Particles/engine_fire.tscn" id="2_3g4co"]
[ext_resource type="Texture2D" uid="uid://ea7yn7iawkw3" path="res://Assets/Texture/Ship Particle.png" id="2_urmwo"]
[ext_resource type="SpriteFrames" uid="uid://cr7nrws1geubs" path="res://Scripts/player.tres" id="4_o4v42"]
[ext_resource type="PackedScene" uid="uid://dfse3e86ghjrm" path="res://Scenes/Player/dash_ability.tscn" id="5_gsmg6"]
[ext_resource type="PackedScene" uid="uid://chia8b5acjtar" path="res://Scenes/Component/health_component.tscn" id="6_vc08u"]
[ext_resource type="PackedScene" uid="uid://wja8hp8m0buw" path="res://Scenes/Component/hitbox_component.tscn" id="7_xt6g7"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xenvm"]
size = Vector2(12, 14)

[sub_resource type="Animation" id="Animation_3tb6o"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../SpawnEffect:emitting")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("..:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_0phdq"]
resource_name = "hit"
length = 0.6
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("..:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4, 0.45, 0.5, 0.55, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [0.349066, -0.349066, 0.349066, -0.349066, 0.349066, -0.349066, 0.349066, -0.349066, 0.349066, -0.349066, 0.349066, -0.349066, 0.349066]
}

[sub_resource type="Animation" id="Animation_nph4m"]
resource_name = "spawn"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../SpawnEffect:emitting")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_drjby"]
_data = {
"RESET": SubResource("Animation_3tb6o"),
"hit": SubResource("Animation_0phdq"),
"spawn": SubResource("Animation_nph4m")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_3df7g"]
radius = 3.0

[node name="Player" type="CharacterBody2D" groups=["Player"]]
collision_mask = 514
motion_mode = 1
script = ExtResource("1_yt6el")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_xenvm")

[node name="FireEffect" parent="." instance=ExtResource("2_3g4co")]

[node name="SpawnEffect" type="CPUParticles2D" parent="."]
emitting = false
amount = 50
lifetime = 0.5
one_shot = true
speed_scale = 1.65
texture = ExtResource("2_urmwo")
emission_shape = 1
emission_sphere_radius = 37.37
direction = Vector2(0, 0)
gravity = Vector2(0, 0)
radial_accel_min = -100.0
radial_accel_max = -100.0

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
use_parent_material = true
sprite_frames = ExtResource("4_o4v42")
frame_progress = 0.418001

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../AnimatedSprite2D")
libraries = {
"": SubResource("AnimationLibrary_drjby")
}

[node name="NormalShootPos" type="Node2D" parent="."]

[node name="ShootSpot" type="Marker2D" parent="NormalShootPos"]
position = Vector2(6, 0)

[node name="HealthComponent" parent="." instance=ExtResource("6_vc08u")]
max_hp = inf

[node name="HitboxComponent" parent="." node_paths=PackedStringArray("health") instance=ExtResource("7_xt6g7")]
collision_mask = 10
health = NodePath("../HealthComponent")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitboxComponent"]
shape = SubResource("CircleShape2D_3df7g")

[node name="DashAbility" parent="." node_paths=PackedStringArray("player") instance=ExtResource("5_gsmg6")]
player = NodePath("..")

[connection signal="taking_damage" from="HealthComponent" to="." method="_on_health_component_taking_damage"]
[connection signal="zero_hp" from="HealthComponent" to="." method="_die"]
